FIXED: layout, alignment and app icon

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -19,8 +19,8 @@ a:hover {
 /*Flip card*/
 .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 320px;
+    width: 270px;
+    height: 300px;
     perspective: 1000px;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -58,4 +58,5 @@ a:hover {
     background-color: var(--bg-color);
     color: var(--text-color);
     transform: rotateY(180deg);
+    font-size: 14px;
 }
